# toy_renderer

./: CMakeLists.txt  Readme.md
geometry/: CMakeLists.txt
geometry/include/: geometry.hpp  test_utils.hpp
geometry/src/: geometry.cpp
geometry/tests/: test_geometry.cpp
include/: geometry.hpp  object3D.hpp
object_loader/: CMakeLists.txt
object_loader/include/: face.hpp  nstack.hpp  triangulation.hpp
object_loader/src/: face.cpp  triangulation.cpp
object_loader/tests/: test_nstack.cpp  test_polygon_chains.cpp
renderer/: CMakeLists.txt
renderer/include/: camera.hpp  scene.hpp
renderer/src/: camera.cpp
src/: CMakeLists.txt  camera.cpp  geometry.cpp  main.cpp  object3D.cpp  scene.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_geometry.cpp  test_utils.cpp
